--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <tr>
                             <td><button type="button" id='btn_restart' onclick="handleReload()">Restart</button></td>
                             <td><button type="button" id='btn_play' onclick="handlePlayPause()">Pause</button></td>
-                            <td><select id = 'pokemonType'>
+                            <td><select id = 'pokemonType' onchange="handleSelect()">
                                 <option value = 'pikachu'>Pikachu</option>
                                 <option value = 'snory'>Snory</option>
                                 <option value = 'mew'>Mew</option>>
