--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                         <input type="range" value="100" id = 'tension' oninput="handleSlider((this.value/100), 'tension')" onchange="handleSlider((this.value/100), 'tension')">
                         <span>Damping</span>
                         <input type="range" value="0" id = 'damping' oninput="handleSlider((this.value/100), 'damping')" onchange="handleSlider((this.value/100), 'damping')">
-                        <span id = 'wavelen_text'>Wave Length</span>
+                        <span id = 'wavelen_text'>Period</span>
                         <input type="range" value="50" id = 'wavelen' oninput="handleSlider((this.value/100), 'wavelen')" onchange="handleSlider((this.value/100), 'wavelen')">
                     </div>
                 </div>
