Enabled cdn from createjs.

--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
 
         </div>
 
-        <script src="easeljs-0.8.2.min.js"></script>
-        <script src="preloadjs-0.6.2.min.js"></script>
+        <script src="https://code.createjs.com/easeljs-0.8.2.min.js"></script>
+        <script src="https://code.createjs.com/preloadjs-0.6.2.min.js"></script>
         <script src="exp.js"></script>
     </body>
 
