Added favicon references.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     
     <head>
         <title>Wave On String</title>
+        
+        <link rel="shortcut icon" href="favicon.ico" />
 
         <style>
             html * {
