--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     
     <head>
-        <title>Wave On String</title>
+        <title>Wave on a String</title>
         
         <link rel="shortcut icon" href="favicon.ico" />
 
@@ -74,7 +74,7 @@
             <div style="display: table; width: 100%; height: 100%;">
 
                 <div style="display: table-cell; width: 1px;">
-                    <canvas id = '_canvas' style="border: 2px solid silver;">
+                    <canvas id = 'sim' style="border: 2px solid silver;">
                         Canvas display is not supported by this browser.
                     </canvas>
 
@@ -156,7 +156,7 @@
 
         <script src="https://code.createjs.com/easeljs-0.8.2.min.js"></script>
         <script src="https://code.createjs.com/preloadjs-0.6.2.min.js"></script>
-        <script src="exp.js"></script>
+        <script src="sim.js"></script>
     </body>
 
 </html>
